--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.phungtsm.test.fatboyOCR">
+    <!-- Declaring the required permissions -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -10,19 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FatboyOCR">
         <activity
+            android:name=".Tutorial"
+            android:exported="true" />
+        <activity
             android:name=".Cam_Captured"
             android:exported="true" />
         <activity
             android:name=".Camera"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity_hc"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity_cccd"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity_cmnd"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
